# portager

./: CHANGELOG.md  README.md  portager-ng.cabal  portager.cabal  stack.yaml
app/: Main.hs
example/: LICENSE  Main.hs  README.md  install.sh  portager-local.cabal  stack.yaml
example/output/: world_sets
example/output/package.accept_keywords/: base-core  games
example/output/package.use/: 01base-core  02base-tools  03games
example/output/sets/: base-core  base-tools
src/: Flatten.hs  Lib.hs  Package.hs  Portager.hs  Writes.hs
src/Portager/: DSL.hs  Flatten.hs  Options.hs  Package.hs  Writes.hs
test/: Spec.hs
test/Portager/: DSLSpec.hs  FlattenSpec.hs  WritesSpec.hs
