name:                portager-ng
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/j1r1k/portager-ng#readme
license:             BSD3
license-file:        LICENSE
author:              Jiri Marsicek
maintainer:          jiri.marsicek@gmail.com
copyright:           2016 Jiri Marsicek
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Package
                     , Flatten
                     , Writes
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , mtl
                     , text
                     , transformers
  default-language:    Haskell2010

executable portager-ng-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , portager-ng
  default-language:    Haskell2010

test-suite portager-ng-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , portager-ng
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/j1r1k/portager-ng
