name:                portager
version:             0.1.0.0
synopsis:            DSL for configuring world sets in portage
description:         Please see README.md
homepage:            https://github.com/j1r1k/portager
license:             BSD3
license-file:        LICENSE
author:              Jiri Marsicek
maintainer:          jiri.marsicek@gmail.com
copyright:           2016 Jiri Marsicek
category:            DSL
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Portager
                     , Portager.DSL
                     , Portager.Flatten
                     , Portager.Options
                     , Portager.Writes
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , lens
                     , mtl
                     , optparse-applicative
                     , text
                     , transformers
  default-language:    Haskell2010

executable portager
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , portager
  default-language:    Haskell2010

test-suite portager-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , portager
                     , hspec
                     , QuickCheck
                     , mtl
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/j1r1k/portager
