name:                portager-local
version:             0.1.0.0
synopsis:            portager-local configuration example
license:             BSD3
license-file:        LICENSE
author:              Jiri Marsicek
maintainer:          Jiri Marsicek <jiri.marsicek@gmail.com>
copyright:           2017 Jiri Marsicek
category:            DSL
build-type:          Simple
cabal-version:       >=1.10

executable portager-local
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , portager
  default-language:    Haskell2010
